Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/staticImport/Ambig1.out
Ambig1.java:24:9: compiler.err.ref.ambiguous: f, kindname.method, f(int), ambig1.B, kindname.method, f(int), ambig1.A
1 error
